--- a/question-service/package.json
+++ b/question-service/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "body-parser": "1.20.3",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
@@ -20,7 +21,8 @@
   "devDependencies": {
     "@types/express": "4.17.21",
     "@types/node": "18.19.53",
-    "ts-node": "10.4.0",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "1.1.8",
     "typescript": "4.9.5"
   }
