feat: Add basic read functions for question

--- a/backend/service-question/src/main/resources/application.properties
+++ b/backend/service-question/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://jeff:jeff-peerprep@peerprep-cluster.gftor.mongodb.net/?retryWrites=true&w=majority&appName=peerprep-cluster
+spring.data.mongodb.uri=mongodb+srv://root:root-peerprep@peerprep-cluster.gftor.mongodb.net/?retryWrites=true&w=majority&appName=peerprep-cluster
 spring.data.mongodb.database=question_db
