[#36] [#37] refactor: move request interfaces into shared package

--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -25,6 +25,7 @@
     "devDependencies": {
         "@repo/eslint-config": "*",
         "@repo/typescript-config": "*",
+        "@repo/request-types": "*",
         "@testcontainers/mongodb": "^10.13.1",
         "@types/cors": "^2.8.17",
         "@types/dotenv": "^6.1.1",
