--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -31,6 +31,7 @@
     "devDependencies": {
         "@repo/eslint-config": "*",
         "@repo/typescript-config": "*",
+        "@repo/request-types": "*",
         "@testcontainers/mongodb": "^10.13.1",
         "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
