--- a/packages/request-types/package.json
+++ b/packages/request-types/package.json
@@ -7,6 +7,7 @@
         "IPaginationRequest.ts"
     ],
     "devDependencies": {
+        "@repo/user-types": "*",
         "@types/express": "^4.17.21"
     }
 }
