--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
         "react": "^18",
         "react-ace": "^12.0.0",
         "react-dom": "^18",
+        "sonner": "^1.5.0",
         "tailwind-merge": "^1.14.0",
         "tailwindcss-animate": "^1.0.7"
     },
