--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -13,6 +13,7 @@
     },
     "license": "MIT",
     "dependencies": {
+        "axios": "^1.7.7",
         "class-validator": "^0.14.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
@@ -20,12 +21,14 @@
         "express-async-errors": "^3.1.1",
         "helmet": "^7.1.0",
         "mongoose": "^8.6.3",
+        "passport": "^0.7.0",
+        "passport-jwt": "^4.0.1",
         "winston": "^3.14.2"
     },
     "devDependencies": {
         "@repo/eslint-config": "*",
-        "@repo/typescript-config": "*",
         "@repo/request-types": "*",
+        "@repo/typescript-config": "*",
         "@testcontainers/mongodb": "^10.13.1",
         "@types/cors": "^2.8.17",
         "@types/dotenv": "^6.1.1",
@@ -33,6 +36,8 @@
         "@types/helmet": "^0.0.48",
         "@types/jest": "^29.5.13",
         "@types/node": "^22.5.5",
+        "@types/passport": "^1.0.16",
+        "@types/passport-jwt": "^4.0.1",
         "@types/supertest": "^6.0.2",
         "globals": "^15.9.0",
         "jest": "^29.7.0",
