--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
             - PORT=3004
             - DB_URL=mongodb://question-db:27017/question-service
             - ACCESS_TOKEN_PUBLIC_KEY=${ACCESS_TOKEN_PUBLIC_KEY}
+            - USER_SERVICE_URL=http://user-service:3002
         build:
             context: .
             dockerfile: ./backend/question-service/Dockerfile
