--- a/frontend/peerprep/package.json
+++ b/frontend/peerprep/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-table": "^8.20.5",
+    "axios": "^1.7.7",
     "framer-motion": "^11.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
