--- a/project/apps/questions-service/package.json
+++ b/project/apps/questions-service/package.json
@@ -25,9 +25,14 @@
     "@repo/dtos": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.4.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@repo/dtos": "workspace:*",
+    "@repo/pipes": "workspace:*",
+    "@supabase/supabase-js": "^2.45.4",
+    "dotenv": "^16.4.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
