--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -35,12 +35,14 @@
         "@types/express": "^4.17.21",
         "@types/helmet": "^0.0.48",
         "@types/jest": "^29.5.13",
+        "@types/jsonwebtoken": "^9.0.7",
         "@types/node": "^22.5.5",
         "@types/passport": "^1.0.16",
         "@types/passport-jwt": "^4.0.1",
         "@types/supertest": "^6.0.2",
         "globals": "^15.9.0",
         "jest": "^29.7.0",
+        "jsonwebtoken": "^9.0.2",
         "nodemon": "^3.1.7",
         "supertest": "^7.0.0",
         "ts-jest": "^29.2.5",
