[#36] [#37] refactor: use barrel exports for all internal type packages

--- a/packages/request-types/package.json
+++ b/packages/request-types/package.json
@@ -2,10 +2,8 @@
     "name": "@repo/request-types",
     "version": "0.0.0",
     "private": true,
-    "files": [
-        "ITypedBodyRequest.ts",
-        "IPaginationRequest.ts"
-    ],
+    "main": "./index.ts",
+    "types": "./index.ts",
     "devDependencies": {
         "@repo/user-types": "*",
         "@types/express": "^4.17.21"
