[#36] [#37] fix: transpilation of internal type packages

--- a/packages/request-types/package.json
+++ b/packages/request-types/package.json
@@ -2,9 +2,13 @@
     "name": "@repo/request-types",
     "version": "0.0.0",
     "private": true,
-    "main": "./index.ts",
-    "types": "./index.ts",
+    "scripts": {
+        "build": "tsc"
+    },
+    "main": "./dist/index.js",
+    "types": "./src/index.ts",
     "devDependencies": {
+        "@repo/typescript-config": "*",
         "@repo/user-types": "*",
         "@types/express": "^4.17.21"
     }
