--- a/packages/user-types/package.json
+++ b/packages/user-types/package.json
@@ -2,6 +2,12 @@
     "name": "@repo/user-types",
     "version": "0.0.0",
     "private": true,
-    "main": "./index.ts",
-    "types": "./index.ts"
+    "scripts": {
+        "build": "tsc"
+    },
+    "main": "./dist/index.js",
+    "types": "./src/index.ts",
+    "devDependencies": {
+        "@repo/typescript-config": "*"
+    }
 }
