--- a/backend/question-service/pyproject.toml
+++ b/backend/question-service/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 fastapi = "^0.114.1"
 structlog = "^24.4.0"
 uvicorn = { extras = ["standard"], version = "^0.30.6" }
+beanie = "^1.26.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.4"
