--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -2,11 +2,11 @@
   "name": "user-service",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js",
+    "dev": "nodemon ./src/server.js",
+    "start": "node ./src/server.js",
     "test": "mocha --require ts-node/register tests/**/*.spec.ts --exit"
   },
   "keywords": [],
