Implement running of frontend and backend concurrently

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "description": "[![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-22041afd0340ce965d47ae6ef1cefeee28c7c493a6346c4f15d667ab976d596c.svg)](https://classroom.github.com/a/bzPrOe11)\r # CS3219 Project (PeerPrep) - AY2425S1\r ## Group: G18",
     "main": "index.js",
     "scripts": {
+        "frontend": "cd frontend && npm run dev",
+        "backend": "cd backend/question-service && npm run dev",
+        "dev": "concurrently \"npm run frontend\" \"npm run backend\"",
         "format": "prettier --write \"**/*.{js,ts,json,md,css,html}\"",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -11,6 +14,7 @@
     "license": "ISC",
     "devDependencies": {
         "@types/express": "^5.0.0",
+        "concurrently": "^9.0.1",
         "prettier": "^3.3.3"
     },
     "dependencies": {
