--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "frontend": "cd frontend && npm run dev",
-        "backend": "cd backend/question-service && npm run dev",
+        "backend": "cd backend && npm run dev",
         "dev": "concurrently \"npm run frontend\" \"npm run backend\"",
         "format": "prettier --write \"**/*.{js,ts,json,md,css,html}\"",
         "test": "echo \"Error: no test specified\" && exit 1"
