fix: Add read env file

--- a/backend/service-user/src/main/resources/application.properties
+++ b/backend/service-user/src/main/resources/application.properties
@@ -13,3 +13,12 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Logging
 logging.level.org.springframework.web=DEBUG
+
+# JWT secret key
+security.jwt.secretKey=${JWT_SECRET_KEY}
+security.jwt.expirationTime=3600000
+
+# Mail properties
+sendgrid.api-key=${SENDGRID_API_KEY}
+
+spring.config.import=optional:file:.env[.properties]
