--- a/backend/question-service/requirements.txt
+++ b/backend/question-service/requirements.txt
@@ -4,12 +4,18 @@ annotated-types==0.7.0 ; python_version >= "3.12" and python_version < "4.0" \
 anyio==4.4.0 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:5aadc6a1bbb7cdb0bede386cac5e2940f5e2ff3aa20277e991cf028e0585ce94 \
     --hash=sha256:c1b2d8f46a8a812513012e1107cb0e68c17159a7a594208005a57dc776e1bdc7
+beanie==1.26.0 ; python_version >= "3.12" and python_version < "4.0" \
+    --hash=sha256:54016f4ec71ed0ea6ce0c7946a395090c45687f254dbbe1cf06eec608383f790 \
+    --hash=sha256:b45926c01d4a899c519c665c2a5f230990717e99f7fd68172a389ca33e7693b9
 click==8.1.7 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:ae74fb96c20a0277a1d615f1e4d73c8414f5a98db8b799a7931d1582f3390c28 \
     --hash=sha256:ca9853ad459e787e2192211578cc907e7594e294c7ccc834310722b41b9ca6de
 colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows") \
     --hash=sha256:08695f5cb7ed6e0531a20572697297273c47b8cae5a63ffc6d6ed5c201be6e44 \
     --hash=sha256:4f1d9991f5acc0ca119f9d443620b77f9d6b33703e51011c16baf57afb285fc6
+dnspython==2.6.1 ; python_version >= "3.12" and python_version < "4.0" \
+    --hash=sha256:5ef3b9680161f6fa89daf8ad451b5f1a33b18ae8a1c6778cdf4b43f08c0a6e50 \
+    --hash=sha256:e8f0f9c23a7b7cb99ded64e6c3a6f3e701d78f50c55e002b839dea7225cff7cc
 fastapi==0.114.1 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:1d7bbbeabbaae0acb0c22f0ab0b040f642d3093ca3645f8c876b6f91391861d8 \
     --hash=sha256:5d4746f6e4b7dff0b4f6b6c6d5445645285f662fe75886e99af7ee2d6b58bb3e
@@ -56,6 +62,12 @@ httptools==0.6.1 ; python_version >= "3.12" and python_version < "4.0" \
 idna==3.8 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:050b4e5baadcd44d760cedbd2b8e639f2ff89bbc7a5730fcc662954303377aac \
     --hash=sha256:d838c2c0ed6fced7693d5e8ab8e734d5f8fda53a039c0164afb0b82e771e3603
+lazy-model==0.2.0 ; python_version >= "3.12" and python_version < "4.0" \
+    --hash=sha256:57c0e91e171530c4fca7aebc3ac05a163a85cddd941bf7527cc46c0ddafca47c \
+    --hash=sha256:5a3241775c253e36d9069d236be8378288a93d4fc53805211fd152e04cc9c342
+motor==3.6.0 ; python_version >= "3.12" and python_version < "4.0" \
+    --hash=sha256:0ef7f520213e852bf0eac306adf631aabe849227d8aec900a2612512fb9c5b8d \
+    --hash=sha256:9f07ed96f1754963d4386944e1b52d403a5350c687edc60da487d66f98dbf894
 pydantic-core==2.23.3 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:01491d8b4d8db9f3391d93b0df60701e644ff0894352947f31fff3e52bd5c801 \
     --hash=sha256:03667cec5daf43ac4995cefa8aaf58f99de036204a37b889c24a80927b629cec \
@@ -146,9 +158,72 @@ pydantic-core==2.23.3 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:fc379c73fd66606628b866f661e8785088afe2adaba78e6bbe80796baf708a63 \
     --hash=sha256:fc3cf31edf405a161a0adad83246568647c54404739b614b1ff43dad2b02e6d5 \
     --hash=sha256:fcf31facf2796a2d3b7fe338fe8640aa0166e4e55b4cb108dbfd1058049bf4cb
+pydantic-settings==2.5.2 ; python_version >= "3.12" and python_version < "4.0" \
+    --hash=sha256:2c912e55fd5794a59bf8c832b9de832dcfdf4778d79ff79b708744eed499a907 \
+    --hash=sha256:f90b139682bee4d2065273d5185d71d37ea46cfe57e1b5ae184fc6a0b2484ca0
 pydantic==2.9.1 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:1363c7d975c7036df0db2b4a61f2e062fbc0aa5ab5f2772e0ffc7191a4f4bce2 \
     --hash=sha256:7aff4db5fdf3cf573d4b3c30926a510a10e19a0774d38fc4967f78beb6deb612
+pymongo==4.9.1 ; python_version >= "3.12" and python_version < "4.0" \
+    --hash=sha256:0492ef43f3342354cf581712e431621c221f60c877ebded84e3f3e53b71bbbe0 \
+    --hash=sha256:08fbab69f3fb6f8088c81f4c4a8abd84a99c132034f5e27e47f894bbcb6bf439 \
+    --hash=sha256:16d2efe559d0d96bc0b74b3ff76701ad6f6e1a65f6581b573dcacc29158131c8 \
+    --hash=sha256:172d8ba0f567e351a18765db23dab7dbcfdffd91a8788d90d46b350f80a40781 \
+    --hash=sha256:1b4b961fce213f2bcdc92268f85111a3668c61b9b4d4e7ece27dce3a137cfcbd \
+    --hash=sha256:1d79f20f9c7cbc1c708fb80b648b6fbd3220fd3437a9bd6017c1eb592e03b361 \
+    --hash=sha256:1d7aa9cc2d92e73bdb036c578ba019da94ea165eb147e691cd910a6fab7ce3b7 \
+    --hash=sha256:1dfd2aa30174d36a3ef1dae4ee4c89710c2d65cac52ce6e13f17c710edbd61cf \
+    --hash=sha256:1fac1def9e9073f1c80198c99f0ec39c2528236c8912d96d7fd3b0237f4c523a \
+    --hash=sha256:286fb275267f0293364ba579f6354452599161f1902ad411061c7f744ab88328 \
+    --hash=sha256:34e4993ae78be56f9e27a141168a1ab78253576fa3e893fa335a719ce204c3ef \
+    --hash=sha256:375765ec81b1f0a26d08928afea0c3dff897c36080a090be53fc7b70cc51d497 \
+    --hash=sha256:3a846423c4535428f69a90a1451df3718bc59f0c4ab685b9e96d3071951e0be4 \
+    --hash=sha256:42c19d2b094cdd0ead7dbb38860bbe8268c140334ce55d8b39204ddb4ebd4904 \
+    --hash=sha256:4327c0d9bd616b8289691360f2d4a09a72fe35479795832eae0d4ff78af53923 \
+    --hash=sha256:432ad395d2233056b042ccc73234e7136aa65d944d6bd8b5138394bd38aaff79 \
+    --hash=sha256:47b4896544095d172c366dd4d4ea1da6b0ab1a77d8416897cc1801e2421b1e67 \
+    --hash=sha256:4cddb51cead9700c4dccc916952bc0321b8d766bf782d374bfa0e93ef47c1d20 \
+    --hash=sha256:4d1b959a3dda0775d9111622ee47ad47772aed3a9da2e7d5f2f513fa68175dea \
+    --hash=sha256:51dbc6251c6783dfcc7d657c346986d8bad7210989b2fe15de16db5204a8e7ae \
+    --hash=sha256:56877cfcdf7dfc5c6408e4551ec0d6d65ebbca4d744a0bc90400f09ef6bbcc8a \
+    --hash=sha256:679b8d55854da7c7fdb82aa5e092ab4de0144daf6758defed8ab00ff9ce05360 \
+    --hash=sha256:687cf70e096381bc65b4273a6a9319617618f7ace65caffc356e1099c4a68511 \
+    --hash=sha256:6bb3d5282278594753089dc7da48bfae4a7f337a2dd4d397eabb591c649e58d0 \
+    --hash=sha256:75d5974f874acdb2f125bdbe785045b23a39ecce1d3143dd5712800c7b6d25eb \
+    --hash=sha256:7f962d74201c772555f7a78792fed820a5ea76db5c7ee6cf43748e411b44e430 \
+    --hash=sha256:8089003a99127f917bdbeec177d41cef019cda8ec70534c1018cb60aacd23c2a \
+    --hash=sha256:8b632e01617f2608880f7b9926f54a5f5ebb51631996e0540fff7fc7980663c9 \
+    --hash=sha256:8f0d5258bc85a4e6b5bcae8160628168e71ec4625a58ceb53327c3280a0b6914 \
+    --hash=sha256:91b1a92214c3912af5467f77c2f6435cd76f6de64c70cba7bb4ee43eba7f459e \
+    --hash=sha256:95418e334629440f70fe5ceeefc6cbbd50defb566901c8d68179ffbaec8d5f01 \
+    --hash=sha256:96462fb2175f740701d229f52018ea6e4adc4148c4112e6628bb359dd534a3df \
+    --hash=sha256:99b611ff75b5d9e17183dcf9584a7b04f9db07e51a162f23ea05e485e0735c0a \
+    --hash=sha256:9d78adf25967c06298c7e488f4cfab79a390fc32c2b1d428613976f99031603d \
+    --hash=sha256:9fbe9fad27619ac4cfda5df0ade26a99906da7dfe7b01deddc25997eb1804e4c \
+    --hash=sha256:a0b10cf51ec14a487c94709d294c00e1fb6a0a4c38cdc3acfb2ced5ef60972a0 \
+    --hash=sha256:a2b12c74cfd90147babb77f9728646bcedfdbd2bd2a5b4130a00e3a0af1a3d34 \
+    --hash=sha256:a40ea8bc9cffb61c5c9c426c430d22235e085e610ee81ae075ddf51f12f76236 \
+    --hash=sha256:a7689da1d1b444284e4ea9ab2eb64a15307b6b795918c0f3cd7774dd1d8a7556 \
+    --hash=sha256:aa4493f304b33c5d2ecee3055c98889ac6724d56f5f922d47420a45d0d4099c9 \
+    --hash=sha256:b23211c031b45d0f32de83ab7d77f9c26f1025c2d2c91463a5d8594a16103655 \
+    --hash=sha256:b347052d510989d1f52b8553b31297f21cf74bd9f6aed71ee84e563492f4ff17 \
+    --hash=sha256:b4c793db8457c856f333f396798470b9bfe405e17c307d581532c74cec70150c \
+    --hash=sha256:b7f2d34390acf60e229c30037d1473fcf69f4536cd7f48f6f78c0c931c61c505 \
+    --hash=sha256:c4204fad54830a3173a5c939cd052d0561fba03dba7e0ff6852fd631f3314aa4 \
+    --hash=sha256:d476d91a5c9e6c37bc8ec3fb294e1c01d95736ccf01a59bb1540fe2f710f826e \
+    --hash=sha256:db5b299e11284f8d82ce2983d8e19fcc28f98f902a179709ef1982b4cca6f8b8 \
+    --hash=sha256:dc3d070d746ab79e9b393a5c236df20e56607389af2b79bf1bfe9a841117558e \
+    --hash=sha256:dd3352eaf578f8e9bdea7a5692910eedad1e8680f60726fc70e99c8af51a5449 \
+    --hash=sha256:e02b03e3815b80a63e773e4c32aed3cf5633d406f376477be74550295c211256 \
+    --hash=sha256:e1f346811d4a2369f88ab7a6f886fa9c3bbc9ed4e4f4a3becca8717a73d465cb \
+    --hash=sha256:e3645aff8419ca60f9ccd08966b2f6b0d78053f9f98a814d025426f1d874c19a \
+    --hash=sha256:ea3f0196e7c311b9944a609ac175bd91ab97952164a1246716fdd38d53ca3bcc \
+    --hash=sha256:f05e34d401be871d7c87cb10727d49315444e4ded07ff876a595e4c23b7436da \
+    --hash=sha256:f23a046531030318622414f21198e232cf93c5640da9a80b45596a059c8cc090 \
+    --hash=sha256:f838f613e74b4dad8ace0d90f42346005bece4eda5bf6d389cfadb8322d39316 \
+    --hash=sha256:f8e8b8deba6a4bff3dd5421071083219521c74d2acae0322de5c06f1a66c56af \
+    --hash=sha256:fbb1c7dfcf6c44e9e1928290631c7603817991cdf570691c9e15fca594918435 \
+    --hash=sha256:fe709d05654c12fc513617c8d5c8d05b7e9cf1d5d94ada68add4e89530c867d2
 python-dotenv==1.0.1 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:e324ee90a023d808f1959c46bcbc04446a10ced277783dc6ee09987c37ec10ca \
     --hash=sha256:f7b63ef50f1b690dddf550d03497b66d609393b40b564ed0d674909a68ebf16a
@@ -215,6 +290,9 @@ starlette==0.38.5 ; python_version >= "3.12" and python_version < "4.0" \
 structlog==24.4.0 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:597f61e80a91cc0749a9fd2a098ed76715a1c8a01f73e336b746504d1aad7610 \
     --hash=sha256:b27bfecede327a6d2da5fbc96bd859f114ecc398a6389d664f62085ee7ae6fc4
+toml==0.10.2 ; python_version >= "3.12" and python_version < "4.0" \
+    --hash=sha256:806143ae5bfb6a3c6e736a764057db0e6a0e05e338b5630894a5f779cabb4f9b \
+    --hash=sha256:b3bda1d108d5dd99f4a20d24d9c348e91c4db7ab1b749200bded2f839ccbe68f
 typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:04e5ca0351e0f3f85c6853954072df659d0d13fac324d0072316b67d7794700d \
     --hash=sha256:1a7ead55c7e559dd4dee8856e3a88b41225abfe1ce8df57b7c13915fe121ffb8
