--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
         "clsx": "^2.1.1",
         "input-otp": "^1.2.4",
         "lucide-react": "^0.441.0",
+        "moment": "^2.30.1",
         "next": "14.2.11",
         "react": "^18",
         "react-ace": "^12.0.0",
