--- a/backend/question/package.json
+++ b/backend/question/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rimraf dist && npx tsc",
     "prestart": "npm run build",
-    "start": "cp .env dist/.env && npx tsc -w & nodemon dist/server.js",
+    "start": "npx tsc -w & nodemon dist/server.js",
     "test": "cross-env NODE_ENV=TEST && jest src/tests/app.spec.ts"
   },
   "author": "",
