--- a/frontend/peerprep/package.json
+++ b/frontend/peerprep/package.json
@@ -9,6 +9,7 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@monaco-editor/react": "^4.6.0",
 		"@nextui-org/button": "2.0.38",
 		"@nextui-org/code": "2.0.33",
 		"@nextui-org/input": "2.2.5",
@@ -23,14 +24,25 @@
 		"@nextui-org/theme": "2.2.11",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
+		"@react-stately/data": "^3.11.6",
+		"@tiptap/pm": "^2.7.2",
+		"@uiw/react-md-editor": "^3.25.6",
+		"@wysimark/react": "^3.0.20",
+		"axios": "^1.7.7",
 		"boxicons": "^2.1.4",
 		"clsx": "2.1.1",
+		"dotenv": "^16.4.5",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.4",
+		"next-remove-imports": "^1.0.12",
 		"next-themes": "^0.2.1",
+		"prismjs": "^1.29.0",
 		"react": "18.3.1",
-		"react-dom": "18.3.1"
+		"react-dom": "18.3.1",
+		"react-quill": "^2.0.0",
+		"react-simple-code-editor": "^0.14.1",
+		"swr": "^2.2.5"
 	},
 	"devDependencies": {
 		"@types/node": "20.5.7",
