--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,11 +3,11 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-CMD ["npm", "run", "dev"]
+CMD ["npm", "start"]
 
 FROM node:20-alpine AS production
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-CMD ["npm", "run", "dev"]
+CMD ["npm", "start"]
