--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "@uiw/codemirror-theme-vscode": "^4.23.1",
     "@uiw/react-codemirror": "^4.23.1",
+    "panels": "^10.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "react-resizable": "^3.0.5",
+    "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
