--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,11 @@
 		"@nextui-org/snippet": "2.0.43",
 		"@nextui-org/switch": "2.0.34",
 		"@nextui-org/system": "2.2.6",
+		"@nextui-org/table": "^2.0.40",
 		"@nextui-org/theme": "2.2.11",
 		"@react-aria/visually-hidden": "3.8.12",
+		"@tanstack/react-query": "^5.56.2",
+		"axios": "^1.7.7",
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
