--- a/question-service/package.json
+++ b/question-service/package.json
@@ -4,7 +4,9 @@
   "description": "This document serves as a simple guide to our backend system.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +19,9 @@
     "fs": "^0.0.1-security",
     "mongodb": "4.0",
     "mongoose": "^8.6.3",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.7"
   }
 }
