--- a/question-service/package.json
+++ b/question-service/package.json
@@ -19,9 +19,7 @@
     "fs": "^0.0.1-security",
     "mongodb": "4.0",
     "mongoose": "^8.6.3",
-    "multer": "^1.4.5-lts.1"
-  },
-  "devDependencies": {
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7"
   }
 }
