--- a/frontend/peerprep/package.json
+++ b/frontend/peerprep/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
+    "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
     "framer-motion": "^11.5.6",
