--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "cd question-service && npm run dev",
+    "dev": "concurrently \"cd question-service && npm run dev\" \"cd user-service && npm run dev\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "workspaces": [
