--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -3,19 +3,22 @@
     "version": "1.0.0",
     "main": "index.ts",
     "scripts": {
-        "dev": "nodemon --exec ts-node index.ts",
+        "dev": "nodemon --exec ts-node src/server.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.0",
+        "joi": "^17.13.3",
         "mongoose": "^8.6.3"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/node": "^22.5.5",
