--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -11,16 +11,23 @@
     "description": "",
     "dependencies": {
         "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.0",
         "joi": "^17.13.3",
-        "mongoose": "^8.6.3"
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.7.0",
+        "winston": "^3.14.2"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
+        "@types/cookie-parser": "^1.4.7",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/joi": "^17.2.3",
+        "@types/jsonwebtoken": "^9.0.7",
+        "@types/mongoose": "^5.11.97",
         "@types/node": "^22.5.5",
         "nodemon": "^3.1.7",
         "ts-node": "^10.9.2",
