--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -18,6 +18,7 @@
         "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.7.0",
+        "ms": "^2.1.3",
         "winston": "^3.14.2"
     },
     "devDependencies": {
@@ -28,6 +29,7 @@
         "@types/joi": "^17.2.3",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/mongoose": "^5.11.97",
+        "@types/ms": "^0.7.34",
         "@types/node": "^22.5.5",
         "nodemon": "^3.1.7",
         "ts-node": "^10.9.2",
