--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
         "class-variance-authority": "^0.7.0",
         "classnames": "^2.5.1",
         "clsx": "^2.1.1",
+        "js-cookie": "^3.0.5",
         "lucide-react": "^0.446.0",
         "next": "^14.2.13",
         "react": "^18.3.1",
@@ -34,6 +35,7 @@
         "@radix-ui/react-label": "^2.1.0",
         "@radix-ui/react-select": "^2.1.1",
         "@types/express": "^5.0.0",
+        "@types/js-cookie": "^3.0.6",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
