Feat: Dockerise Frontend Feat: Add frontend to docker compose Fix: Fix import.sh Bug: Need to npm build then serve the built Vite application for frontend in future

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,6 +39,15 @@ services:
     networks:
       - app-network
 
+  # Frontend
+  frontend:
+    build: ./frontend
+    container_name: frontend
+    ports:
+      - "8080:5173"
+    networks:
+      - app-network
+
 volumes:
   mongo-data:
     driver: local
