Add user service nginx config

--- a/compose.yaml
+++ b/compose.yaml
@@ -7,6 +7,8 @@ services:
       - ./nginx/default.conf:/tmp/default.conf
       - /etc/letsencrypt:/etc/letsencrypt
       - react-build:/app/dist
+    environment:
+      USER_SERVICE_ADDR: user-service:3001
     ports:
       - "80:80"
       - "443:443"
