--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -20,6 +20,14 @@ server {
     index index.html;
     try_files $uri $uri/ index.html;
   }
+
+  location ~ ^/api/(user|auth) {
+
+    proxy_pass http://$USER_SERVICE_ADDR;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  }
 }
 
 # # HTTPS server block
