--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
         "react": "^18",
         "react-ace": "^12.0.0",
         "react-dom": "^18",
+        "react-select": "^5.8.1",
         "tailwind-merge": "^1.14.0",
         "tailwindcss-animate": "^1.0.7"
     },
