--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:20-alpine
+FROM node:20
 
 # Create a non-privileged user
 RUN useradd -ms /bin/sh -u 1001 app
@@ -8,11 +8,11 @@ USER app
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY --chown=app:app package.json package-lock.json ./
 
 RUN npm install
 
-COPY --chown=app:app . .
+COPY --chown=app:app . /app
 
 EXPOSE 5173
 
