--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://question-service-598285527681.us-central1.run.app",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -32,6 +33,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-pro-sidebar": "^1.1.0",
+    "react-spinners": "^0.14.1",
     "sweetalert2": "^11.14.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
