--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-pro-sidebar": "^1.1.0",
     "react-spinners": "^0.14.1",
     "sweetalert2": "^11.14.1",
