--- a/project/packages/dtos/package.json
+++ b/project/packages/dtos/package.json
@@ -41,6 +41,7 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^20.3.1",
+    "glob": "^11.0.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
