--- a/backend/service-user/src/main/resources/application.properties
+++ b/backend/service-user/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.jpa.hibernate.ddl-auto=update
 # Logging
 logging.level.org.springframework.web=DEBUG
 
+dotenv.path=./.env
+
 # JWT secret key
 security.jwt.secretKey=${JWT_SECRET_KEY}
 security.jwt.expirationTime=3600000
