--- a/project/apps/web/package.json
+++ b/project/apps/web/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@repo/dtos": "workspace:*",
+    "react-select": "5.8.1",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
