--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "@emotion/styled": "^11.13.0",
         "@mui/icons-material": "^6.1.1",
         "@mui/material": "^6.1.1",
+        "@radix-ui/react-alert-dialog": "^1.1.1",
         "@radix-ui/react-dialog": "^1.1.1",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-separator": "^1.1.0",
