--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
 		"@nextui-org/link": "2.0.35",
 		"@nextui-org/listbox": "2.1.27",
 		"@nextui-org/navbar": "2.0.37",
+		"@nextui-org/pagination": "^2.0.36",
 		"@nextui-org/react": "^2.4.8",
 		"@nextui-org/select": "^2.2.7",
 		"@nextui-org/snippet": "2.0.43",
