--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "install-all": "npm install && run-p install-all:*",
-    "install-all:frontend": "cd frontend && npm install"
+    "install-all:frontend": "cd frontend && npm install",
+    "install-all:question-service": "cd question-service && npm install"
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
