Resolve code smells and remove bad code from backend
Signed-off-by: SeeuSim <seeusimong@gmail.com>

--- a/backend/question/.env.local
+++ b/backend/question/.env.local
@@ -1,4 +1,7 @@
 EXPRESS_ENV="local"
+PEERPREP_UI_HOST="http://localhost:5173"
+
+EXPRESS_PORT=9002
 EXPRESS_DB_HOST="localhost"
 EXPRESS_DB_PORT=5433
 POSTGRES_DB="question"
