--- a/backend/question/package.json
+++ b/backend/question/package.json
@@ -20,21 +20,26 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "drizzle-orm": "^0.33.0",
     "env-cmd": "^10.1.0",
     "express": "^4.21.0",
+    "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
     "pino": "^9.4.0",
     "pino-http": "^10.3.0",
     "postgres": "^3.4.4"
   },
   "devDependencies": {
+    "@swc/core": "^1.7.26",
+    "@swc/helpers": "^0.5.13",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.5",
     "drizzle-kit": "^0.24.2",
     "nodemon": "^3.1.4",
     "pino-pretty": "^11.2.2",
     "ts-node": "^10.9.2",
-    "tsc-alias": "^1.8.10"
+    "tsc-alias": "^1.8.10",
+    "tsconfig-paths": "^4.2.0"
   }
 }
