--- a/peerprep_fe/package.json
+++ b/peerprep_fe/package.json
@@ -12,6 +12,7 @@
     "@next/env": "^14.2.12",
     "dotenv": "^16.4.5",
     "next": "14.2.11",
+    "next-client-cookies": "^1.1.1",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18"
