--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -16,10 +16,11 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5"
+    "question-service": "file:"
   }
 }
