--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -19,9 +19,10 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.5.4"
+    "mongoose": "^8.5.4",
+    "user-service": "file:"
   }
 }
