--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "frontend": "file:",
     "lucide-react": "^0.445.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
