--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "vite": "^5.4.6"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
