Update docker compose to run question and user service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
-version: "3"
+version: "3.8"
 services:
-  collaboration-service:
-    build:
-      context: ./collaboration-service
-    ports:
-      - "3000:3000"
   questionbank:
     build:
       context: ./questionbank
     ports:
       - "8080:8080"
+
+  user-service:
+    build:
+      context: ./PeerPrep-UserService/user-service
+    ports:
+      - "3001:3001"
