--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ CMD ["npm", "start"]
 
 FROM node:20-alpine AS production
 WORKDIR /app
-COPY package*.json ./
-RUN npm install
 COPY . .
-CMD ["npm", "start"]
+RUN npm ci
+RUN npm run build
+CMD ["npx", "serve", "build"]
