Update docker deployment

--- a/question-service/.env.sample
+++ b/question-service/.env.sample
@@ -1,8 +1,10 @@
-# MONGODB_URI = # (Set this to your remote MongoDB URI, leave blank if using local)
+# MONGODB_URI=  # (Set this to your remote MongoDB URI, comment out if using local)
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=password
 
-USER_PORT=8004
+QUESTION_PORT=8003
+
+ENV=PROD
 
 # Secret for creating JWT signature
 JWT_SECRET=you-can-replace-this-with-your-own-secret
