--- a/question-service/docker-compose.yml
+++ b/question-service/docker-compose.yml
@@ -7,12 +7,16 @@ services:
       - ./mongo-data:/data/db
     env_file:
       - .env
+    entrypoint: /bin/sh -c 'if [ -z "$MONGODB_URI" ]; then echo "Starting MongoDB..."; mongod --bind_ip_all; else echo "DB_URI is set. Shutting down."; exit 1; fi'
+    restart: no
 
   g38-question-service:
     image: g38-question-service:latest
     container_name: question-service
     env_file:
       - .env  # Loads environment variables from .env file
+    environment:
+      - MONGODB_URI=${MONGODB_URI:-mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongodb:27017/question-service?authSource=admin}  # Fallback to local MongoDB if MONGODB_URI is not set
     ports:
       - "${QUESTION_PORT}:${QUESTION_PORT}"  # Bind port using env variable
     depends_on:
