fix: Fix verification email and remove return of userinformation when register and setup postgres database of user

--- a/backend/service-user/src/main/resources/application.properties
+++ b/backend/service-user/src/main/resources/application.properties
@@ -3,24 +3,28 @@ spring.application.name=backend
 # Server settings
 server.port=8080
 
-# H2 Database (test connection)
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
-
 # Logging
 logging.level.org.springframework.web=DEBUG
 
 dotenv.path=./.env
+
+# Database configuration
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
 
 # JWT secret key
 security.jwt.secretKey=${JWT_SECRET_KEY}
 security.jwt.expirationTime=3600000
 
 # Mail properties
-sendgrid.api-key=${SENDGRID_API_KEY}
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${SUPPORT_EMAIL}
+spring.mail.password=${APP_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.config.import=optional:file:.env[.properties]
+
+# spring.config.import=optional:file:.env[.properties]
