--- a/question-service/docker-compose.yml
+++ b/question-service/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   mongodb:
     image: mongo:latest
     container_name: mongodb-question-service
-    # expose port for testing purposes
-    ports:
-      - "27018:27017"
+    # expose port for testing purposes or to view database in MongoDB Compass
+    # ports:
+    #   - "27018:27017"
     volumes:
       - ./mongo-data:/data/db
     env_file:
@@ -14,7 +14,7 @@ services:
     restart: no
 
   g38-question-service:
-    image: g38-question-service:latest
+    image: delishad21/g38-question-service:latest
     container_name: question-service
     env_file:
       - .env  # Loads environment variables from .env file
