Add mass docker compose file

--- a/user-service/.env.sample
+++ b/user-service/.env.sample
@@ -1,4 +1,4 @@
-# MONGODB_URI=  # (Set this to your remote MongoDB URI, comment out if using local)
+# USER_MONGODB_URI=  # (Set this to your remote MongoDB URI, comment out if using local)
 
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=password
