--- a/question-service/docker-compose.yml
+++ b/question-service/docker-compose.yml
@@ -4,13 +4,13 @@ services:
     image: mongo:latest
     container_name: mongodb-question-service
     # expose port for testing purposes or to view database in MongoDB Compass
-    # ports:
-    #   - "27018:27017"
+    ports:
+      - "27018:27017"
     volumes:
       - ./mongo-data:/data/db
     env_file:
       - .env
-    entrypoint: /bin/sh -c 'if [ -z "$MONGODB_URI" ]; then echo "Starting MongoDB..."; mongod --bind_ip_all; else echo "DB_URI is set. Shutting down."; exit 1; fi'
+    entrypoint: /bin/sh -c 'if [ -z "$QUESTION_MONGODB_URI" ]; then echo "Starting MongoDB..."; mongod --bind_ip_all; else echo "QUESTION_MONGODB_URI is set. Shutting down."; exit 1; fi'
     restart: no
 
   g38-question-service:
@@ -19,7 +19,7 @@ services:
     env_file:
       - .env  # Loads environment variables from .env file
     environment:
-      - MONGODB_URI=${MONGODB_URI:-mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongodb:27017/question-service?authSource=admin}  # Fallback to local MongoDB if MONGODB_URI is not set
+      - QUESTION_MONGODB_URI=${QUESTION_MONGODB_URI:-mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongodb:27017/question-service?authSource=admin}  # Fallback to local MongoDB if MONGODB_URI is not set
     ports:
       - "${QUESTION_PORT}:${QUESTION_PORT}"  # Bind port using env variable
     depends_on:
