Attempt runtime variables for frontend

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,8 @@
 # Frontend
 
-QUESTION_SERVICE_URL=http://g38-question-service:8003
-# IMAGE_UPLOAD_KEY= <your-image-upload-key>
-FRONTEND_PORT=3000
+NEXT_PUBLIC_QUESTION_SERVICE_URL=http://g38-question-service:8003
+# NEXT_PUBLIC_IMAGE_UPLOAD_KEY= <your-image-upload-key>
+NEXT_PUBLIC_FRONTEND_PORT=3000
 
 # User Service
 
