--- a/frontend/peerprep/.env.sample
+++ b/frontend/peerprep/.env.sample
@@ -1,3 +1,3 @@
-QUESTION_SERVICE_URL=http://localhost:8003
-# IMAGE_UPLOAD_KEY=<insert your portive auth token here>
-FRONTEND_PORT=3000
+NEXT_PUBLIC_QUESTION_SERVICE_URL=http://localhost:8003
+# NEXT_PUBLIC_IMAGE_UPLOAD_KEY=<insert your portive auth token here>
+NEXT_PUBLIC_FRONTEND_PORT=3000
