--- a/frontend/peerprep/package.json
+++ b/frontend/peerprep/package.json
@@ -36,6 +36,7 @@
     "intl-messageformat": "^10.5.0",
     "next": "14.2.4",
     "next-remove-imports": "^1.0.12",
+    "next-runtime-env": "^3.2.2",
     "next-themes": "^0.2.1",
     "prismjs": "^1.29.0",
     "react": "18.3.1",
