Added dockerfiles and changed mongoDB from localhost

--- a/backend/user-service/.env
+++ b/backend/user-service/.env
@@ -1,3 +1,4 @@
 JWT_SECRET=eu97kF3Uc86bCrNthxsLTyv4PKaZw2WJ
 GOOGLE_CLIENT_ID=350585476549-mild3b1ggbtd57t4sduk8qlc7d8suq66.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+DB_CLOUD_URI=mongodb+srv://admin:P2DDNCBwtGhPRpj5@peerprep.eftot.mongodb.net/?retryWrites=true&w=majority&appName=PeerPrep
